# tr-rag

./: README.md  config.py  experiment_runner.py  main.py  pyproject.toml  rag.ipynb  rag_evaluation.md  rag_runner.py  refactor_plan.md
.ipynb_checkpoints/: bbrag-checkpoint.ipynb
knowledge_base/product/: smartflow.md
knowledge_base/technologies/langchain/: langchain_rag_implementation.md
knowledge_base/technologies/python/: python_basics.md  python_libraries_text_processing.md
rag-core/: alembic.ini  pyproject.toml
rag-core/.ipynb_checkpoints/: rag-checkpoint.ipynb
rag-core/alembic/: env.py
rag-core/alembic/versions/: 771d8feb82b8_init_runs_and_query_results.py
rag-core/docs/: rag_evaluation.md  refactor_plan.md
rag-core/knowledge_base/manufacture/mica/: pearl_powder.md
rag-core/knowledge_base/technologies/python/: text_processing_python.md
rag-core/knowledge_base/technologies/rag/: rag_system_concepts.md
rag-core/knowledge_base/technologies/sqlalchemy/: api_cheatsheet.md
rag-core/knowledge_base_store/: chroma.sqlite3
rag-core/src/: app.py
rag-core/src/api/: __init__.py  models.py  routes.py
rag-core/src/core/: config.py  config.yaml
rag-core/src/evaluation/: __init__.py  evaluator.py
rag-core/src/evaluation/db/: __init__.py  engine.py  models.py  store.py
rag-core/src/evaluation/results/: 20260617_212137_bge-m3_cross_encoder.json  evaluations.db
rag-core/src/notebooks/: rag.ipynb
rag-core/src/rag/: __init__.py  document_chunker.py  generation_integration.py  markdown_splitter.py  retrieval_optimization.py  vector_store_builder.py
rag-core/src/scripts/: convert_testset_to_hash.py  download_model.py  dump_chunks.py  experiment_runner.py  generate_testset.py  query_bot.py  rag_runner.py
rag-core/test/evaluation/: chunk_mapping.jsonl
rag-ui/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
rag-ui/messages/: en.json  zh.json
rag-ui/project.inlang/: settings.json
rag-ui/src/: App.tsx  main.tsx
scripts/: convert_testset_to_hash.py  remap_testset.py
src/: elliptic_curve_manifold.ipynb
src/evaluation/: __init__.py  evaluator.py  metrics.py  testset_builder.py
src/rag/: __init__.py  change_detector.py  document_chunker.py  generation_integration.py  retrieval_optimization.py  vector_store_builder.py
test/evaluation/: chunk_mapping.jsonl  testset.jsonl  testset_new.jsonl
(+18 files in other folders)
