[project]
name = "rag-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
    "chromadb>=1.5.9",
    "jupyterlab>=4.5.0",
    "langchain-text-splitters>=1.1.2",
    "langchain>=1.3.0",
    "langchain-chroma>=1.1.0",
    "langchain-huggingface>=1.2.2",
    "matplotlib>=3.10.9",
    "torch>=2.11.0",
    "sentence-transformers>=5.5",
    "unstructured[docx,md,pptx]>=0.22.30",
    "rank-bm25>=0.2.2",
    "fastapi>=0.136.3",
    "ipywidgets>=8.1.8",
    "pydantic-settings>=2.14.1",
    "langchain-deepseek>=1.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "ty>=0.0.34",
]

[tool.uv.sources]
torch = { index = "pytorch" }


[[tool.uv.index]]
name = "pytorch"
url = "https://mirrors.nju.edu.cn/pytorch/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
