[project]
name = "tr-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
    "chromadb>=1.5.9",
    "jupyterlab>=4.5.0",
    "langchain-text-splitters>=1.1.2",
    "langchain>=1.3.0",
    "langchain-chroma>=1.1.0",
    "langchain-huggingface>=1.2.2",
    "matplotlib>=3.10.9",
    "torch>=2.11.0",
    "sentence-transformers>=5.5",
    "unstructured[docx,md,pptx]>=0.22.30",
    "fastapi>=0.136.3",
    "ipywidgets>=8.1.8",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0",
    "langchain-deepseek>=1.1.0",
    "langchain-experimental>=0.4.2",
    "flagembedding>=1.4.0",
    "sqlalchemy>=2.0.51",
    "aiosqlite>=0.22.1",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
download-model = "scripts.download_model:main"
convert-testset = "scripts.convert_testset_to_hash:main"
rag-runner = "scripts.rag_runner:main"
query-bot = "scripts.query_bot:main"
rag-api = "app:main"


[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "modelscope>=1.37.1",
    "ruff>=0.15.12",
    "ty>=0.0.34",
]

[tool.uv.sources]
torch = { index = "pytorch" }


[[tool.uv.index]]
name = "pytorch"
url = "https://mirrors.nju.edu.cn/pytorch/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.uv]
package = true